<resources>
    <string name="app_name">HackathonAutorisation</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">create account</string>
    <string name="ok">ok</string>
    <string name="sign_in">sign in</string>
    <string name="team_list">Team List</string>
    <string name="create_your_own_team_here_let_s_start">Create your own team here.</string>
    <string name="team_name">team name:</string>
    <string name="input_team_name">please input team name here</string>
    <string name="description_edit">please write some description</string>
    <string name="add_team">Add Team</string>
    <string name="team_description">Team Description:</string>
    <string name="name">name:</string>
    <string name="creator">creator:</string>
    <string name="users">users:</string>
    <string name="description">Description:</string>
    <string name="go_back">Go Back</string>
    <string name="list_teams">List Teams</string>
    <string name="profile">Profile</string>
</resources>