<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.TeamDescriptionFragment">


    <TextView
        android:id="@+id/txt_title_team_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/team_description"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/txt_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@id/txt_title_team_description"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/team_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="Best Ever Team"
        app:layout_constraintTop_toBottomOf="@id/txt_title_team_description"
        app:layout_constraintStart_toEndOf="@id/txt_team_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/creator"
        app:layout_constraintTop_toBottomOf="@id/txt_team_name"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/creator_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="chuck_id"
        app:layout_constraintTop_toBottomOf="@id/team_name"
        app:layout_constraintStart_toEndOf="@id/txt_creator"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/users"
        app:layout_constraintTop_toBottomOf="@id/txt_creator"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/users"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="User1, User2, User3, User4"
        android:lines="2"
        app:layout_constraintTop_toBottomOf="@id/creator_id"
        app:layout_constraintStart_toEndOf="@id/txt_users"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@id/users"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="pamparammme"
        app:layout_constraintTop_toBottomOf="@id/users"
        app:layout_constraintStart_toEndOf="@id/txt_description"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/description"
        android:text="@string/go_back"
        app:icon="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>